FPVTL-2249 work around for the ordercollection overwriting documented on FPVTL-2513